Creating the supplier routes
