# swagger.json
@@ -494,6 +494,259 @@
           }
         ]
       }
+    },
+    "/suppliers/": {
+      "get": {
+        "tags": [
+          "Suppliers"
+        ],
+        "description": "Retrieve a list of suppliers.",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "OAuth2": ["read:store"]
+          }
+        ]
+      },
+      "post": {
+        "tags": [
+          "Suppliers"
+        ],
+        "description": "Create a new supplier.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "supplier data to be created.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "description": "Name of the supplier.",
+                  "example": "Disani"
+                },
+                "contactName": {
+                  "type": "string",
+                  "description": "Name of the suppliers contact.",
+                  "example": "John"
+                },
+                "email": {
+                  "type": "string",
+                  "description": "Email address of the supplier.",
+                  "example": "john.doe@example.com"
+                },
+                "phone": {
+                  "type": "string",
+                  "description": "Phone number of the supplier.",
+                  "example": "+123456789"
+                },
+                "address": {
+                  "type": "string",
+                  "description": "Address of the supplier.",
+                  "example": "123 N Supplies St."
+                },
+                "city": {
+                  "type": "string",
+                  "description": "City where the supplier resides.",
+                  "example": "Supply City"
+                },
+                "country": {
+                  "type": "string",
+                  "description": "Country where the supplier resides.",
+                  "example": "Supply Country"
+                },
+                "productsSupplied": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  },
+                  "description": "Products supplied by the supplier.",
+                  "example": ["Engineering"]
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "OAuth2": ["write:store"]
+          }
+        ]
+      }
+    },
+    "/suppliers/{id}": {
+      "get": {
+        "tags": [
+          "Suppliers"
+        ],
+        "description": "Retrieve a specific supplier by ID.",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID of the supplier to retrieve."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "OAuth2": ["read:store"]
+          }
+        ]
+      },
+      "put": {
+        "tags": [
+          "Suppliers"
+        ],
+        "description": "Update an existing supplier by ID.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID of the supplier to update."
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "supplier data to be updated.",
+            
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "description": "Name of the supplier.",
+                  "example": "Disani"
+                },
+                "contactName": {
+                  "type": "string",
+                  "description": "Name of the suppliers contact.",
+                  "example": "John"
+                },
+                "email": {
+                  "type": "string",
+                  "description": "Email address of the supplier.",
+                  "example": "john.doe@example.com"
+                },
+                "phone": {
+                  "type": "string",
+                  "description": "Phone number of the supplier.",
+                  "example": "+123456789"
+                },
+                "address": {
+                  "type": "string",
+                  "description": "Address of the supplier.",
+                  "example": "123 N Supplies St."
+                },
+                "city": {
+                  "type": "string",
+                  "description": "City where the supplier resides.",
+                  "example": "Supply City"
+                },
+                "country": {
+                  "type": "string",
+                  "description": "Country where the supplier resides.",
+                  "example": "Supply Country"
+                },
+                "productsSupplied": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  },
+                  "description": "Products supplied by the supplier.",
+                  "example": ["Engineering"]
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "OAuth2": ["write:store"]
+          }
+        ]
+      },
+      "delete": {
+        "tags": [
+          "Suppliers"
+        ],
+        "description": "Delete an supplier by ID.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID of the supplier to delete."
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "OAuth2": ["write:store"]
+          }
+        ]
+      }
     }
   }
 }
